# opensemcomm

./: .gitignore  EXPERIMENTS.md  OpenSemCom_Research_Plan.md  README.md  pyproject.toml
examples/: run_full_open.py
logs/: osc-ablate-full-605215.out  osc-clip-feats-604967.err  osc-clip-feats-604967.out  osc-clip-feats-604970.err  osc-clip-feats-604970.out  osc-clip-feats-604971.err  osc-clip-feats-604971.out  osc-clip-feats-604976.err  osc-clip-feats-604976.out  osc-clip-feats-604977.err  osc-clip-feats-604977.out  osc-clip-feats-604978.err  osc-clip-feats-604978.out  osc-clip-feats-604983.err  osc-clip-feats-604983.out  osc-clip-full-604988.err  osc-clip-full-604988.out  osc-clip-full-604990.out  osc-clip-full-604995.out  osc-eval-all-604374.out  osc-eval-all-604385.out  osc-eval-all-604444.out  osc-eval-all-604546.out  osc-found-feats-605012.err  osc-found-feats-605012.out  osc-found-feats-605013.err  osc-found-feats-605013.out  osc-found-feats-605017.err  osc-found-feats-605017.out  osc-found-feats-605052.err  osc-found-feats-605052.out  osc-found-full-605094.out  osc-found-full-605097.out  osc-found-full-605099.out  osc-found-full-605102.out  osc-found-full-605103.out  osc-found-full-605112.out  osc-found-full-605143.out  osc-found-full-605175.out  osc-full-manifest-604559.out  (+7 more)
manifests/: opensemcom_real.availability.json  opensemcom_real.csv  opensemcom_real_clip.csv  opensemcom_real_clip.summary.json  opensemcom_real_dinov3_mixed_open_calibration.mixed_calibration.json  opensemcom_real_facebook__dinov3-vitb16-pretrain-lvd1689m.summary.json  (+10 more)
results/: README.md  (+31 more)
(+1215 files in other folders)
