[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opensemcom"
version = "0.1.0"
description = "Risk-certified open-environment semantic communication prototype for dynamic 6G wireless networks."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "joblib>=1.3",
  "numpy>=1.24",
  "PyYAML>=6.0",
  "scikit-learn>=1.3",
]
authors = [
  { name = "OpenSemCom Contributors" }
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
]

[project.scripts]
opensemcom-demo = "opensemcom.cli.run_demo:main"
opensemcom-bench = "opensemcom.cli.run_benchmark:main"
opensemcom-build-manifest = "opensemcom.cli.build_manifest:main"
opensemcom-validate-manifest = "opensemcom.cli.validate_manifest:main"
opensemcom-run-config = "opensemcom.cli.run_config:main"
opensemcom-aggregate = "opensemcom.cli.aggregate_results:main"
opensemcom-download-datasets = "opensemcom.cli.download_datasets:main"
opensemcom-extract-features = "opensemcom.cli.extract_features:main"
opensemcom-analyze-traces = "opensemcom.cli.analyze_traces:main"
opensemcom-make-mixed-calibration-manifest = "opensemcom.cli.make_mixed_calibration_manifest:main"
opensemcom-full-open-aware = "opensemcom.cli.full_open_aware_experiment:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
